--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "framer-motion": "^10.16.4",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-bootstrap": "^2.9.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-github-calendar": "^3.2.2",
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.42",
@@ -25,8 +24,8 @@
     "@restart/ui": "^1.6.6"
   },
   "resolutions": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@restart/ui": "^1.6.6"
   },
   "scripts": {
